<resources>
    <string name="app_name">Studienplaner</string>
    <string name="action_settings">Settings</string>
    <string name="grade_average_total">Notendurchschnitt gesamt:</string>
    <string name="grade_average_mi">Notendurchschnitt Medieninformatik:</string>
    <string name="grade_average_inf">Notendurchschnitt Informationswissenschaft:</string>

    <string name="menu_button_1">Module</string>
    <string name="menu_button_2">Stundenplan</string>
    <string name="menu_button_3">Notenschnitt</string>
    <string name="menu_button_4">Empfehlungen</string>



    <string name="button_modul_1_mi">MEI-M01 Einführung</string>
    <string name="button_modul_2_mi">MEI-M02 Mathematik</string>
    <string name="button_modul_3_mi">MEI-M03 Informatik</string>
    <string name="button_modul_4_mi">MEI-M04 Media Engineering</string>
    <string name="button_modul_5_mi">MEI-M05 Mediengestaltung</string>
    <string name="button_modul_10_mi">MEI-M10 Angewandte Medieninformatik</string>


    <string name="button_modul_7_inf">INF-M07 Projekt</string>
    <string name="button_modul_6_inf">INF-M06 Informationssystem</string>
    <string name="button_modul_5_inf">INF-M05 Software-Ergonomie</string>
    <string name="button_modul_4_inf">INF-M04 Information Retrieval</string>
    <string name="button_modul_2_inf">INF-M02 Mathematik</string>
    <string name="button_modul_1_inf">INF-M01 Einführung</string>

    <string name="empfehlungen">Empfehlungen</string>
    <string name="medieninformatik">Medieninformatik</string>
    <string name="informationswissenschaft">Informations-wissenschaft</string>
    <string name="wahlbereich">Freier Wahlbereich</string>

    <string-array name="semester_array">
        <item>Semester 1</item>
        <item>Semester 2</item>
        <item>Semester 3</item>
        <item>Semester 4</item>
        <item>Semester 5</item>
        <item>Semester 6</item>
        <item>Semester 7</item>
        <item>Semester 8</item>
    </string-array>



</resources>
