<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/modul_1_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_modul_1_mi"
        android:textSize="30sp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"/>
    <Button
        android:id="@+id/modul_2_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_modul_2_mi"
        android:textSize="30sp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"/>
    <Button
        android:id="@+id/modul_3_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_modul_3_mi"
        android:textSize="30sp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"/>
    <Button
        android:id="@+id/modul_4_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_modul_4_mi"
        android:textSize="30sp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"/>
    <Button
        android:id="@+id/modul_5_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_modul_5_mi"
        android:textSize="30sp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"/>
    <Button
        android:id="@+id/modul_10_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_modul_10_mi"
        android:textSize="30sp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"/>

</LinearLayout>