<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/medieninformatik_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medieninformatik"
        android:textSize="36sp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="36dp"/>

    <Button
        android:id="@+id/informationswissenschaft_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informationswissenschaft"
        android:textSize="36sp"
        android:layout_marginBottom="36dp"/>

    <Button
        android:id="@+id/wahlbereich_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wahlbereich"
        android:textSize="36sp"/>


</LinearLayout>